<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center">

        <Button
            android:id="@+id/btnUtilisateur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Gerer les utilisateurs"
            android:background="#009688"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:textColor="@color/colorBtnText"/>
        <Button
            android:id="@+id/btnServices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Gerer les services offerts"
            android:background="#009688"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:textColor="@color/colorBtnText"/>
        </LinearLayout>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>