<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ServiceActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackgroundLight">

    <LinearLayout
        android:paddingHorizontal="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">


        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/editTextService"
            android:ems="10"
            app:met_floatingLabelTextColor="@color/colorTextDark"
            android:inputType="textPersonName|textAutoComplete"
            app:met_floatingLabel="highlight"
            app:met_textColor="@color/colorTextDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Service"
            app:met_textColorHint="@color/colorHint"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/editTextRate"
            android:ems="10"
            android:inputType="textPersonName|textAutoComplete"
            app:met_floatingLabel="highlight"
            app:met_textColor="@color/colorTextDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Rate"
            app:met_textColorHint="@color/colorHint"
            />

        <Button
            android:id="@+id/addButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="Add"
            android:layout_marginBottom="15dp"/>

        <ListView
            android:id="@+id/listViewServices"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />



    </LinearLayout>

    </RelativeLayout>


</android.support.constraint.ConstraintLayout>