<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackgroundLight">


        <LinearLayout
            android:paddingHorizontal="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_centerInParent="true">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/editTextNomOrgaisation"
                android:ems="10"
                app:met_floatingLabelTextColor="@color/colorTextDark"
                app:met_floatingLabel="highlight"
                app:met_textColor="@color/colorTextDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Nom de l'Organisation"
                app:met_textColorHint="@color/colorHint"
                android:paddingTop="10dp"
                />
            <Switch
                android:id="@+id/switchLicensed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:paddingVertical="20dp"
                android:text="License Professionel"
                android:textColor="@color/colorTextDark" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/editTextDescriptOrgaisation"
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:gravity="top"
                android:hint="veuillez rentrer un description de Votre Organisation"
                android:inputType="text|textMultiLine"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelTextColor="@color/colorTextDark"
                app:met_textColor="@color/colorTextDark"
                app:met_textColorHint="@color/colorHint" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Services Disponible" />

                    <Spinner
                        android:id="@+id/ServicesOffert"
                        style="@style/Widget.AppCompat.DropDownItem.Spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="visible" />
                </LinearLayout>

                <Button
                    android:id="@+id/buttonAddService"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Ajouter" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:text="Services Offert" />

                <ListView

                    android:id="@+id/listViewSvcOff"
                    android:layout_width="match_parent"
                    android:layout_height="180dp">

                </ListView>


            </LinearLayout>

            <Button
                android:id="@+id/buttonAjouterOrg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Enregister les infos d'organisation" />

        </LinearLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>